--- a/MachineLearning_Supervised_Final.ipynb
+++ b/MachineLearning_Supervised_Final.ipynb
@@ -1111,9 +1111,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6d3875c6-135b-40b2-a73b-ec744c843b2c",
+   "metadata": {},
+   "source": [
+    "<h3>GitHub Repository</h3>\n",
+    "\n",
+    "https://github.com/TayaPrince/ml-supervised-final/blob/main/MachineLearning_Supervised_Final.ipynb"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d3875c6-135b-40b2-a73b-ec744c843b2c",
+   "id": "c906f7fe-b31b-4878-87f8-c47c91a75e5c",
    "metadata": {},
    "outputs": [],
    "source": []
